--- a/app/views/oeuvres/_ad_card.html.erb
+++ b/app/views/oeuvres/_ad_card.html.erb
@@ -2,7 +2,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2941773271062587"
        crossorigin="anonymous"></script>
   <ins class="adsbygoogle"
-       style="display:block"
+       style="display:block; min-height:90dvh"
        data-ad-format="fluid"
        data-ad-layout-key="-6i+ei+43-7l-j"
        data-ad-client="ca-pub-2941773271062587"
