--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= turbo_include_tags %> 
+
     <meta name="robots" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
     <meta name="googlebot" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
     <meta name="bingbot" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
